- Fixes issue with floating footer, it now sticks to the bottom of the page. - Fixes overflow where spinner on the donate page would cause the scrollbars to flash between visible and hidden.

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -16,7 +16,13 @@ footer {
   background-color: #0a0a0a;
   color: #6b6b6b;
   font-size: 11px;
-  font-size: 0.6875rem; }
+  font-size: 0.6875rem; 
+  position: absolute;
+  right: 0;
+  left: 0;
+  text-align: center; }
+@media (min-width: 600px) {
+  footer {bottom: 0;}}
 
 .jumbotron {
   background-color: transparent;
